# tesstools

./: .gitignore  README.md  flake.nix
python-project/: noxfile.py  pyproject.toml
python-project/mortar/: __init__.py  config.py  log.py  path.py  process.py  ssh.py  tesseract.py  video.py
python-project/test/: test_jp.py  test_tesseract.py
python-project/test/data/: capture_00.str  capture_04.str  capture_06.str
python-project/test/data/jp/iog/: iog-01.mkv
