[project]
name = "mortar"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "tomlkit"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "mypy",
    "nox",
    "pytest"
]

[project.scripts]
mortess = "mortar.tesseract:main"

[tool.coverage.run]
source = [ "mortar" ]

[tool.mypy]
explicit_package_bases = true
packages = [ "mortar", "test" ]

[tool.pytest.ini_options]
testpaths = [ "test" ]
